# dossier

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  VISION.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  version-bump.py
.github/scripts/: generate-latest-json.mjs
.github/workflows/: publish.yml
apps/dossier-desktop/: package.json  tsconfig.json
apps/dossier-desktop/assets/: logo.icns
apps/dossier-desktop/scripts/: check-electron.mjs  check-port.mjs  check-rust.mjs  check-version-sync.mjs  dev-desktop.mjs
apps/dossier-desktop/src/: backend.test.ts  backend.ts  main.ts  preload.ts  tmdb.ts
apps/dossier-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/dossier-desktop/src-tauri/capabilities/: default.json
apps/dossier-desktop/src-tauri/icons/: icon.icns
apps/dossier-desktop/src-tauri/src/: main.rs
apps/dossier-ui/: package.json  svelte.config.js  tsconfig.json  vite.config.ts
apps/dossier-ui/.svelte-kit/: ambient.d.ts  non-ambient.d.ts
apps/dossier-ui/src/: app.css  app.d.ts  app.html  shims.d.ts
apps/external-service-simulator/: package.json
apps/external-service-simulator/src/: simulate.ts
docs/: auto-updates.md
scripts/: dev.mjs
tests/e2e/: package.json  playwright.config.ts
tests/e2e/playwright-report/: index.html
tests/e2e/specs/: acceptance.spec.ts  chat-markdown-review.spec.ts  mock-dossier.ts  (+10 more)
tools/catalogue-builder/: README.md  convert.py  discover.py  discover_from_similar.py  discover_movies_index.py  discover_tv.py  feature_schema.py  rescrape_votes.py  sample-urls.txt  scrape.py
(+5977 files in other folders)
