[package]
name = "dossier-desktop"
version = "0.1.5"
description = "Dossier desktop shell (Tauri)"
authors = ["Dossier"]
license = "UNLICENSED"
repository = ""
edition = "2021"
rust-version = "1.88.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }
rfd = "0.15.4"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tauri = { version = "2", features = ["tray-icon"] }
tokio = { version = "1.43.0", features = ["time"] }

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2"
